--- a/pom.xml
+++ b/pom.xml
@@ -213,15 +213,10 @@
       <artifactId>openshift-client</artifactId>
     </dependency>
 
-    <!-- I think this is the version jenkins piplines uses? -->
+    <!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy</artifactId>
-      <version>1.8.9</version>
-    </dependency>
-    <dependency>
-      <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy-json</artifactId>
+      <artifactId>groovy-all</artifactId>
       <version>2.4.3</version>
     </dependency>
     <dependency>
