添加资源目录

--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,12 @@
 
   <build>
     <sourceDirectory>src</sourceDirectory>
-
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
     <pluginManagement>
       <plugins>
         <plugin>
